--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <receiver android:name=".ScheduledNotificationReceiver"/>
+
         <activity android:name=".AddTaskActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
